--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -372,6 +372,9 @@
 										<tr class="graybg">
 											<th>{{'label.heading.accnum' | translate}}</th>
 											<th>{{'label.heading.loanaccount' | translate}}</th>
+<th>{{'label.heading.loanamount' | translate}}</th>
+<th>{{'label.heading.outstandingamount' | translate}}</th>
+<th>{{'label.heading.dueamount' | translate}}</th>
 											<th class="center">{{'label.heading.type' | translate}}</th>
 											<th>{{'label.heading.closedate' | translate}}</th>
 										</tr>
